--- a/SimpleEnterpriseMaven/src/resources/DaoServiceInterface.properties
+++ b/SimpleEnterpriseMaven/src/resources/DaoServiceInterface.properties
@@ -1,2 +1,2 @@
-dao.class=ru.itis.dao.UsersDao
-service.class=ru.itis.service.SimpleUsersService
+dao.class=ru.itis.dao.UsersDaoFileBasedImpl
+service.class=ru.itis.service.SimpleUsersServiceImpl
