next step factory

--- a/jbdc_cars_owners/src/main/resources/DaoProperties.properties
+++ b/jbdc_cars_owners/src/main/resources/DaoProperties.properties
@@ -1,2 +1,2 @@
-daojdbccars.class=ru.itis.dao.CarsDaoJdbcImpl
-daojdbcowners.class=ru.itis.dao.DaojdbcOwnersImpl
+carsdao.class=ru.itis.dao.CarsDaoImpl
+ownersdao.class=ru.itis.dao.OwnersDaoImpl
