--- a/jbdc_cars_owners/pom.xml
+++ b/jbdc_cars_owners/pom.xml
@@ -7,6 +7,7 @@
     <groupId>ru.itis</groupId>
     <artifactId>jdbc-start</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <dependencies>
         <dependency>
@@ -18,6 +19,11 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
         </dependency>
     </dependencies>
 
