--- a/owncars/v5_with_spring_autowired/WebOwnersCars/src/main/webapp/WEB-INF/web.xml
+++ b/owncars/v5_with_spring_autowired/WebOwnersCars/src/main/webapp/WEB-INF/web.xml
@@ -22,4 +22,18 @@
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>/</url-pattern>
     </servlet-mapping>
+
+    <filter>
+        <filter-name>TokenFilter</filter-name>
+        <filter-class>ru.itis.filters.TokenFilter</filter-class>
+        <init-param>
+            <param-name>message-param</param-name>
+            <param-value>FROM FILTER</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>TokenFilter</filter-name>
+        <url-pattern>/owners</url-pattern>
+    </filter-mapping>
 </web-app>
